Initial commit: Gemini Chatbot Frontend Clone

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Character encoding for proper text rendering -->
     <meta charset="UTF-8" />
+    <!-- Responsive viewport for mobile scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Page title shown in browser tab -->
     <title>React Country Explorer</title>
   </head>
   <body class="bg-cream dark:bg-deep-charcoal">
+    <!-- React root element; all app content is rendered here by React -->
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Main entry point for the React app (Vite/React will mount here) -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html> 
